Empty states for time entries and activity blocks

--- a/src/ui/windows/TogglDesktop/TogglDesktop/App.xaml
+++ b/src/ui/windows/TogglDesktop/TogglDesktop/App.xaml
@@ -31,6 +31,7 @@
             <converters:AdaptProjectTextColorConverter x:Key="AdaptProjectTextColorConverter" />
             <converters:BooleanInvertToVisibilityConverter x:Key="BooleanInvertToVisibilityConverter"/>
             <converters:HasAnyFlagToVisibilityConverter x:Key="HasAnyFlagToVisibilityConverter"/>
+            <converters:EmptyListToCollapsedConverter x:Key="EmptyListToVisibleConverter" Inverse="True"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
