--- a/src/ui/windows/TogglDesktop/TogglDesktop/ui/Resources/Themes/ColorScheme/Dark.xaml
+++ b/src/ui/windows/TogglDesktop/TogglDesktop/ui/Resources/Themes/ColorScheme/Dark.xaml
@@ -44,7 +44,8 @@
     <!-- derived colors: -->
     <Color x:Key="Toggl.FivePercentBlackColor">#2D2D2D</Color>
     <Color x:Key="Toggl.TransparentBlackColor">#002D2D2D</Color>
-    <Color x:Key="Toggl.TimelineTimeColor">#555500</Color>
+    <Color x:Key="Toggl.ActivityBlockColor">#06AAF5</Color>
+    <Color x:Key="Toggl.TimelineSeparatorColor">#979797</Color>
 
     <SolidColorBrush x:Key="Toggl.SelectionElements.Background" Color="{StaticResource Toggl.SelectionElements.BackgroundColor}" po:Freeze="True" />
     <SolidColorBrush x:Key="Toggl.SelectionElements.Border" Color="{StaticResource Toggl.Grayish1Color}" po:Freeze="True" />
@@ -107,5 +108,7 @@
     <SolidColorBrush x:Key="Toggl.PopupBorderBrush" Color="{StaticResource Toggl.LightGrayColor}" />
     <SolidColorBrush x:Key="Toggl.WorkspaceSeparator" Color="{StaticResource Toggl.BlackColor}" Opacity="0.05" po:Freeze="True"/>
     <DropShadowEffect x:Key="Toggl.DropDownShadow" ShadowDepth="1" BlurRadius="4" Direction="270" Opacity="0.3" Color="Black" />
-    <SolidColorBrush x:Key="Toggl.TimelineTimeBrush" Color="{StaticResource Toggl.TimelineTimeColor}" po:Freeze="True"/>
+    <SolidColorBrush x:Key="Toggl.TimelineTimeBrush" Color="{StaticResource Toggl.GrayColor}" po:Freeze="True"/>
+    <SolidColorBrush x:Key="Toggl.ActivityBlockBrush" Color="{StaticResource Toggl.ActivityBlockColor}" po:Freeze="True"/>
+    <SolidColorBrush x:Key="Toggl.TimelineSeparatorBrush" Color="{StaticResource Toggl.TimelineSeparatorColor}" po:Freeze="True"/>
 </ResourceDictionary>
