--- a/src/ui/windows/TogglDesktop/TogglDesktop/ui/Resources/Themes/ColorScheme/Light.xaml
+++ b/src/ui/windows/TogglDesktop/TogglDesktop/ui/Resources/Themes/ColorScheme/Light.xaml
@@ -45,6 +45,8 @@
     <Color x:Key="Toggl.FivePercentBlackColor">#F2F2F2</Color>
     <Color x:Key="Toggl.TransparentBlackColor">#00F2F2F2</Color>
     <Color x:Key="Toggl.TimelineTimeColor">#555500</Color>
+    <Color x:Key="Toggl.ActivityBlockColor">#06AAF5</Color>
+    <Color x:Key="Toggl.TimelineSeparatorColor">#E8E8E8</Color>
 
     <SolidColorBrush x:Key="Toggl.SelectionElements.Background" Color="{StaticResource Toggl.SelectionElements.BackgroundColor}" po:Freeze="True" />
     <SolidColorBrush x:Key="Toggl.SelectionElements.Border" Color="{StaticResource Toggl.Grayish1Color}" po:Freeze="True" />
@@ -107,4 +109,6 @@
     <SolidColorBrush x:Key="Toggl.WorkspaceSeparator" Color="{StaticResource Toggl.BlackColor}" Opacity="0.1" po:Freeze="True"/>
     <DropShadowEffect x:Key="Toggl.DropDownShadow" ShadowDepth="1" BlurRadius="4" Direction="270" Opacity="0.1" Color="{DynamicResource Toggl.BlackColor}"/>
     <SolidColorBrush x:Key="Toggl.TimelineTimeBrush" Color="{StaticResource Toggl.TimelineTimeColor}" po:Freeze="True"/>
+    <SolidColorBrush x:Key="Toggl.ActivityBlockBrush" Color="{StaticResource Toggl.ActivityBlockColor}" po:Freeze="True"/>
+    <SolidColorBrush x:Key="Toggl.TimelineSeparatorBrush" Color="{StaticResource Toggl.TimelineSeparatorColor}" po:Freeze="True"/>
 </ResourceDictionary>
